# rayplate

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  generate_rl_alias.cmake
.github/workflows/: build.yml  deploy-pages.yml  package-angle.yml
cmake/: AngleArtifacts.cmake  GenerateAliases.cmake  RayplateAngle.cmake  generate_rl_alias.cmake
scripts/: generate_game_assets.py  init_project.py  package_angle.py  test_init_project.py
src/: CMakeLists.txt  angle_cfg.c  angle_cfg.h  game.c  game.h  graphics_api.c  graphics_api.h  main.c
tests/: test_package_angle.py
